syntax = "proto3";

package crypto;

service CryptoService {
  rpc StreamGetTopCryptos (TopCryptosRequest) returns (stream TopCryptosResponse);
}

message TopCryptosRequest {
  optional string currency = 1; 
}

message CryptoItem {
  string symbol = 1;
  string name = 2;
  double current_price = 3;
  double market_cap = 4;
  int32 market_cap_rank = 5;
}

message TopCryptosResponse {
  repeated CryptoItem cryptos = 1;
  string last_updated = 2;
}